everything but the adventure module